# saidai_ical_generator

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
saidai_ical_generator/: __main__.py  driver.py
saidai_ical_generator/html_parser/: html_table_resolver.py  lecture_list.py  regist_list.py
saidai_ical_generator/net/: chrome.py  firefox.py  lib.py
src/: main.py
src/html_parser/: lecture_list.py  regist_list.py
src/net/: browser.py  chrome.py  firefox.py  lib.py
tests/: test_saidai_ical_generator.py
