[tool.poetry]
name = "saidai_ical_generator"
version = "0.3.0"
description = ""
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25"
selenium = "^4.0.0"
chromedriver-binary-auto = "^0.1.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
saidai-ical-generator = 'saidai_ical_generator.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
