[metadata]
name = saidai-ical-generator
version = 0.1.0
description = ics generator from saidai-kyoumu site
long_description = file: README.md
long_description_content_type = text/markdown
author = kimotu
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
packages = find:
install_requires = 
    requests >= 2.25.1
    selenium >= 3.141.0

[options.entry_points]
console_scripts =
    saidai-ical-generator = saidai_ical_generator.__main__:main
